fix chatform being weird with extra padding

--- a/pyrite/build-unminified/base.css
+++ b/pyrite/build-unminified/base.css
@@ -2135,7 +2135,6 @@ html:is([lang=en-GB], [lang=fr]) .info__755e1::after {
 
 .scrollableContainer_ff917f {
   max-height: 30vh;
-  margin-bottom: 24px;
 }
 
 .container__72188 .name__084dd {
