--- a/pyrite/source/theme/chatForm/_chatForm.scss
+++ b/pyrite/source/theme/chatForm/_chatForm.scss
@@ -58,7 +58,7 @@
 }
 #{c(chatForm scrollableContainer)} {
 	max-height: 30vh;
-	margin-bottom: 24px;
+	// margin-bottom: 24px;
 }
 #{c(chatForm replyContainer)} {
 	#{c(chatForm replyName)} {
